@@ -164,7 +164,12 @@
   // PATCH END — Parts Reader
   // ================================================================
 
-  const DATA_URL='Shopguide_Findings.json';
+  const DEFAULT_FINDINGS_FILES=[
+    'Shopguide_Findings.json',
+    'Findings_Shopguide.json',
+    'Findings_shopguide.json'
+  ];
+  const DATA_URL=DEFAULT_FINDINGS_FILES[0];
   const DATA_KEY='sf-data';
   const FINDINGS_PATH_KEY='sf-findings-path';
   const STATE_KEY='sf-state';
@@ -2212,24 +2217,38 @@
     if(ensureDataPromise) return ensureDataPromise;
     ensureDataPromise=(async()=>{
       try{
-        const resp=await fetch(DATA_URL,{cache:'no-store'});
-        if(!resp.ok) throw new Error('HTTP '+resp.status);
-        const parsed=await resp.json();
-        if(Array.isArray(parsed)){
-          const payload=JSON.stringify(parsed);
-          localStorage.setItem(DATA_KEY,payload);
-          lastValues[DATA_KEY]=payload;
-        }else if(parsed&&typeof parsed==='object'){
-          const payload=JSON.stringify(parsed);
-          localStorage.setItem(DATA_KEY,payload);
-          lastValues[DATA_KEY]=payload;
+        let stored=false;
+        let lastError=null;
+        for(const candidate of DEFAULT_FINDINGS_FILES){
+          try{
+            const resp=await fetch(candidate,{cache:'no-store'});
+            if(!resp.ok) throw new Error('HTTP '+resp.status);
+            const parsed=await resp.json();
+            if(Array.isArray(parsed)){
+              const payload=JSON.stringify(parsed);
+              localStorage.setItem(DATA_KEY,payload);
+              lastValues[DATA_KEY]=payload;
+            }else if(parsed&&typeof parsed==='object'){
+              const payload=JSON.stringify(parsed);
+              localStorage.setItem(DATA_KEY,payload);
+              lastValues[DATA_KEY]=payload;
+            }
+            if(!localStorage.getItem(FINDINGS_PATH_KEY)){
+              localStorage.setItem(FINDINGS_PATH_KEY,candidate);
+              lastValues[FINDINGS_PATH_KEY]=candidate;
+            }
+            stored=true;
+            break;
+          }catch(fetchErr){
+            lastError=fetchErr;
+          }
         }
-        if(!localStorage.getItem(FINDINGS_PATH_KEY)){
-          localStorage.setItem(FINDINGS_PATH_KEY,DATA_URL);
-          lastValues[FINDINGS_PATH_KEY]=DATA_URL;
+        if(!stored){
+          const tried=DEFAULT_FINDINGS_FILES.join(', ');
+          console.warn(`NSF: Standard-Findings konnten nicht geladen werden (${tried})`,lastError);
         }
       }catch(err){
-        console.warn('NSF: Shopguide_Findings.json konnte nicht geladen werden',err);
+        console.warn('NSF: Fehler beim Laden der Standard-Findings',err);
       }
     })();
     return ensureDataPromise;
